Made background of splot view tabs collapse correctly

--- a/userChrome.css
+++ b/userChrome.css
@@ -76,7 +76,7 @@ not (-moz-bool-pref: "zen.view.use-single-toolbar") {
       tab:not([zen-essential]) .tab-background, #tabs-newtab-button, .tab-label-container,
       .pinned-tabs-container-separator, .zen-current-workspace-indicator-name, #zen-workspaces-button,
       .tab-group-label, #zen-sidebar-top-buttons-customization-target > *, #zen-workspaces-button .subviewbutton, #zen-media-focus-button::after,
-      .tab-group-container{
+      .tab-group-container, tab-group{
         transition: clip-path 0ms ease-in-out var(--transition-delay-fast),
         transform 0ms ease-in-out var(--transition-delay-fast),
         opacity 0ms ease-in-out var(--transition-delay-fast),
@@ -216,6 +216,9 @@ not (-moz-bool-pref: "zen.view.use-single-toolbar") {
             }
           }
         }
+        tab-group {
+          clip-path: inset(0 0 0 0);
+        }
       }
       }
 
@@ -287,15 +290,28 @@ not (-moz-bool-pref: "zen.view.use-single-toolbar") {
       }
 
 
+      /*Collapses tab for square backgrounds on hover, during collapsed state*/
+      tab:not([zen-essential], [split-view="true"]) .tab-background{
+        width: 36px !important;
+      }
+
+      /*Collapses split view tab group for square backgrounds on hover, during collapsed state*/
+      @media not (-moz-bool-pref: "zen.tabs.vertical.right-side"){
+        tab-group {
+          clip-path: inset(0px calc(var(--expanded-tab-bar-width) - var(--collapsed-tab-bar-width) - 3px) 0px 0px round 10px);
+        }
+      }
+      @media (-moz-bool-pref: "zen.tabs.vertical.right-side"){
+        tab-group {
+          clip-path: inset(0px 0px 0px calc(var(--expanded-tab-bar-width) - var(--collapsed-tab-bar-width) - 3px) round 10px);
+        }
+      }
 
       /* CENTER FAVICONS on collapsed state */
       tab:not([zen-essential]){ /*, [pinned]){  //superpins*/
         .tab-icon-image{
           margin-left: 4px !important;
           margin-right: 4px !important;
-        }
-        .tab-background{
-          width: 36px !important;
         }
       }
       #navigator-toolbox:not([zen-right-side="true"]){
@@ -484,11 +500,6 @@ not (-moz-bool-pref: "zen.view.use-single-toolbar") {
       #zen-create-new-button{
       order: -1 !important;
       }
-      }
-
-      /*Collapses tab for square backgrounds on hover, during collapsed state*/
-      tab:not([zen-essential]) .tab-background{
-        width: 37px;
       }
 
       /*collapses the thin line separator*/
